--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
   <div class="thankyou-box">
     <h1>🎉 Thank You!</h1>
     <p>Your message has been sent successfully. We’ll get back to you soon.</p>
-    <a href="index3.html">Go Back to Home</a>
+    <a href="https://kartikzen.github.io/Kartik-Portfolio/">Go Back to Home</a>
   </div>
 </body>
 </html>
+
