--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     <h1>🎉 Thank You!</h1>
     <p>Your message has been sent successfully. We’ll get back to you soon.</p>
     <a href="https://kartikzen.github.io/Kartik-Portfolio/">Go Back to Home</a>
+    <a href="https://google.com">Go Back to GOOGLE</a>
   </div>
 </body>
 </html>
+
 
